fix network table overflow and image table row actions

--- a/src/app/base/components/node/networking/NetworkTable/_index.scss
+++ b/src/app/base/components/node/networking/NetworkTable/_index.scss
@@ -21,6 +21,7 @@
 
       &.action {
         width: 4rem;
+        overflow: visible;
       }
     }
 
